added 2 endpoints for rooms, added basic ws support
