# openapi.yml
@@ -199,7 +199,60 @@ paths:
           description: Internal server error
       security:
         - ApiKeyAuth: []
-
+  /rooms/{id}/leave:
+    post:
+      tags:
+        - Rooms
+      summary: Leave a room
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Room left
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '403':
+          description: user not in room
+        '404':
+          description: Room not found
+        '500':
+          description: Internal server error
+      security:
+        - ApiKeyAuth: []
+  /rooms/{id}:
+    get:
+      tags:
+        - Rooms
+      summary: Get a room
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Room found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateRoomResponse'
+        '401':
+          description: Unauthorized
+        '403':
+          description: user not in room
+        '404':
+          description: Room not found
+        '500':
+          description: Internal server error
+      security:
+        - ApiKeyAuth: []
 components:
   schemas:
     CreateUserRequest:
